--- a/panel.html
+++ b/panel.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Panel IoT - Blynk</title>
+
   <style>
     body {
       font-family: Arial;
@@ -41,6 +42,7 @@
       left: 32px;
     }
   </style>
+
 </head>
 
 <body>
@@ -60,32 +62,45 @@
   </div>
 
 <script>
-const TOKEN = "onD0Wv2vSP2jHaeDORcnpKjyZ05mrJye"; // 
+
+const TOKEN = "onD0Wv2vSP2jHaeDORcnpKjyZ05mrJye";
 const BASE = "https://blynk.cloud/external/api";
 
-// Leer sensores
+// =============================
+//  LECTURA DE SENSORES (V0,V1)
+// =============================
 function readData() {
-  fetch(`${BASE}/get?token=${TOKEN}&V0,V1`)
+  fetch(`${BASE}/batch/get?token=${TOKEN}&V0&V1`)
     .then(r => r.json())
     .then(data => {
-      document.getElementById("hum").innerText = data.V0;
-      document.getElementById("temp").innerText = data.V1;
-    });
+      if (data.V0 !== undefined)
+        document.getElementById("hum").innerText = data.V0;
+
+      if (data.V1 !== undefined)
+        document.getElementById("temp").innerText = data.V1;
+    })
+    .catch(err => console.log("Error leyendo", err));
 }
+
 setInterval(readData, 2000);
 readData();
 
-// Alternar ventilador
+// =============================
+//  SWITCH DEL VENTILADOR (V2)
+// =============================
 function toggleFan() {
-  const sw = document.getElementById("toggle");
-  const isOn = sw.classList.contains("on");
-  const newVal = isOn ? 0 : 1;
+  const s = document.getElementById("toggle");
+  const on = s.classList.contains("on");
+  const newVal = on ? 0 : 1;
 
-  fetch(`${BASE}/update?token=${TOKEN}&V2=${newVal}`);
+  fetch(`${BASE}/update?token=${TOKEN}&pin=V2&value=${newVal}`);
 
-  if (isOn) sw.classList.remove("on");
-  else sw.classList.add("on");
+  if (on)
+    s.classList.remove("on");
+  else
+    s.classList.add("on");
 }
+
 </script>
 
 </body>
