--- a/index.html
+++ b/index.html
@@ -63,21 +63,21 @@
 
 <script>
 
-const TOKEN = "onD0Wv2vSP2jHaeDORcnpKjyZ05mrJyeI";
+const TOKEN = "onD0Wv2vSP2jHaeDORcnpKjyZ05mrJye";
 const BASE = "https://blynk.cloud/external/api";
 
 // =============================
-//  LECTURA DE SENSORES (V0,V1)
+//  LECTURA DE SENSORES V0 & V1
 // =============================
 function readData() {
-  fetch(`${BASE}/batch/get?token=${TOKEN}&V0&V1`)
+  fetch(`${BASE}/batch/get?token=${TOKEN}&v0&v1`)
     .then(r => r.json())
     .then(data => {
-      if (data.V0 !== undefined)
-        document.getElementById("hum").innerText = data.V0;
+      if (data.v0 !== undefined)
+        document.getElementById("hum").innerText = data.v0;
 
-      if (data.V1 !== undefined)
-        document.getElementById("temp").innerText = data.V1;
+      if (data.v1 !== undefined)
+        document.getElementById("temp").innerText = data.v1;
     })
     .catch(err => console.log("Error leyendo", err));
 }
@@ -89,16 +89,16 @@ readData();
 //  SWITCH DEL VENTILADOR (V2)
 // =============================
 function toggleFan() {
-  const s = document.getElementById("toggle");
-  const on = s.classList.contains("on");
-  const newVal = on ? 0 : 1;
+  const sw = document.getElementById("toggle");
+  const isOn = sw.classList.contains("on");
+  const newVal = isOn ? 0 : 1;
 
-  fetch(`${BASE}/update?token=${TOKEN}&pin=V2&value=${newVal}`);
+  fetch(`${BASE}/update?token=${TOKEN}&V2=${newVal}`);
 
-  if (on)
-    s.classList.remove("on");
+  if (isOn)
+    sw.classList.remove("on");
   else
-    s.classList.add("on");
+    sw.classList.add("on");
 }
 
 </script>
