--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
 <head>
   <meta charset="UTF-8">
   <title>Panel IoT - Blynk</title>
-
   <style>
     body {
       font-family: Arial;
@@ -42,7 +41,6 @@
       left: 32px;
     }
   </style>
-
 </head>
 
 <body>
@@ -62,32 +60,30 @@
   </div>
 
 <script>
-
-const TOKEN = "onD0Wv2vSP2jHaeDORcnpKjyZ05mrJye";
+const TOKEN = "FyZnCNggIQ91xPA6a_FPfExvB-hcwfn0"; 
 const BASE = "https://blynk.cloud/external/api";
 
-// =============================
-//  LECTURA DE SENSORES V0 & V1
-// =============================
+// ---- Leer Temperatura (V0) ----
 function readData() {
-  fetch(`${BASE}/batch/get?token=${TOKEN}&v0&v1`)
+  // Temperatura
+  fetch(`${BASE}/get?token=${TOKEN}&V0`)
     .then(r => r.json())
     .then(data => {
-      if (data.v0 !== undefined)
-        document.getElementById("hum").innerText = data.v0;
+      document.getElementById("temp").innerText = data;
+    });
 
-      if (data.v1 !== undefined)
-        document.getElementById("temp").innerText = data.v1;
-    })
-    .catch(err => console.log("Error leyendo", err));
+  // Humedad
+  fetch(`${BASE}/get?token=${TOKEN}&V1`)
+    .then(r => r.json())
+    .then(data => {
+      document.getElementById("hum").innerText = data;
+    });
 }
 
 setInterval(readData, 2000);
 readData();
 
-// =============================
-//  SWITCH DEL VENTILADOR (V2)
-// =============================
+// ---- Control Ventilador (V2) ----
 function toggleFan() {
   const sw = document.getElementById("toggle");
   const isOn = sw.classList.contains("on");
@@ -95,12 +91,9 @@ function toggleFan() {
 
   fetch(`${BASE}/update?token=${TOKEN}&V2=${newVal}`);
 
-  if (isOn)
-    sw.classList.remove("on");
-  else
-    sw.classList.add("on");
+  if (isOn) sw.classList.remove("on");
+  else sw.classList.add("on");
 }
-
 </script>
 
 </body>
