--- a/panel.html
+++ b/panel.html
@@ -49,7 +49,7 @@
 
   <div class="card">
     <h2>Temperatura: <span id="temp">--</span> °C</h2>
-    <h2>Humedad: <span id="hum">--</span> %</h2>
+    <h2>Humedad del ambiente  : <span id="hum">--</span> %</h2>
   </div>
 
   <div class="card">
@@ -92,3 +92,4 @@ function toggleFan() {
 
 </body>
 </html>
+
